--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <div class="section">
     <h2>Contact</h2>
     <p>
-        LinkedIn: <a href="https://www.linkedin.com/in/YOUR-LINK" target="_blank">View Profile</a><br>
-        GitHub: <a href="https://github.com/suhaskale7272" target="_blank">GitHub Profile</a><br>
+        LinkedIn: <a href="https://www.linkedin.com/in/suhas-kale-/" target="_blank">View Profile</a><br>
+        GitHub: <a href="https://github.com/kale-suhas" target="_blank">GitHub Profile</a><br>
         Email: your@email.com
     </p>
 </div>
