--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p>
         LinkedIn: <a href="https://www.linkedin.com/in/suhas-kale-/" target="_blank">View Profile</a><br>
         GitHub: <a href="https://github.com/kale-suhas" target="_blank">GitHub Profile</a><br>
-        Email: your@email.com
+        Email: suhaskale@outlook.in
     </p>
 </div>
 
