--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="section">
     <h2>Contact</h2>
     <p>
-        LinkedIn: <a href="https://www.linkedin.com/in/suhas-kale-" target="_blank">View Profile</a><br>
+        LinkedIn: <a href="https://www.linkedin.com/in/suhas-kale-/" target="_blank">View Profile</a><br>
         GitHub: <a href="https://github.com/kale-suhas" target="_blank">GitHub Profile</a><br>
         Email: suhaskale@outlook.in
     </p>
